site/template/header.tmpl: moved back to collapse plugin for nav dropdown, dropdown toggle was giving issues on mobile

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -78,7 +78,6 @@ label {
 
 #ms-header nav {
     position: absolute;
-    display: none;
     top: 3rem;
     right: 0;
     border-radius: 0 0 0.75rem 0.25rem;
